<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.harman.taxapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/newTransactionFragment"
        android:name="com.harman.taxapp.ui.newtransaction.NewTransactionFragment"
        android:label="@string/menu_new_transaction"
        tools:layout="@layout/fragment_new_transaction" >
        <action
            android:id="@+id/action_nav_new_transaction_to_nav_taxes"
            app:destination="@id/taxesFragment" />
    </fragment>

    <fragment
        android:id="@+id/taxesFragment"
        android:name="com.harman.taxapp.ui.taxes.TaxesFragment"
        android:label="@string/menu_taxes"
        tools:layout="@layout/fragment_taxes" >
        <action
            android:id="@+id/action_nav_taxes_to_nav_new_transaction"
            app:destination="@id/newTransactionFragment" />
        <action
            android:id="@+id/action_taxesFragment_to_transactionsFragment"
            app:destination="@id/transactionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/exitFragment"
        android:name="com.harman.taxapp.ui.exit.ExitFragment"
        android:label="fragment_exit"
        tools:layout="@layout/fragment_exit" />
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.harman.taxapp.ui.transactions.TransactionsFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transactions">
        <action
            android:id="@+id/action_transactionsFragment_to_taxesFragment"
            app:destination="@id/taxesFragment" />
        <action
            android:id="@+id/action_transactionsFragment_to_newTransactionFragment"
            app:destination="@id/newTransactionFragment" />
        <action
            android:id="@+id/action_transactionsFragment_to_transactionDetailsFragment"
            app:destination="@id/transactionDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/transactionDetailsFragment"
        android:name="com.harman.taxapp.ui.detailtransaction.TransactionDetailsFragment"
        android:label="@string/menu_transaction_detail"
        tools:layout="@layout/fragment_transaction_details">
        <action
            android:id="@+id/action_transactionDetailsFragment_to_transactionsFragment"
            app:destination="@id/transactionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/ratesTodayFragment"
        android:name="com.harman.taxapp.ui.ratestoday.RatesTodayFragment"
        android:label="@string/menu_currency_rate"
        tools:layout="@layout/rates_today_fragment" />


</navigation>