<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detailtransaction.TransactionDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinner_type_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:entries="@array/type_transaction"
            android:fontFamily="@font/montserrat"
            android:minHeight="48dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_id_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/editIdDetail"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_date_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/editDetailDate"
            android:inputType="date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edit_sum_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/editDetailSum"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_currencies_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:entries="@array/currencies"
            android:minHeight="48dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_update_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_ok"
            android:text="@string/buttonDetailUpdate" />

        <Button
            android:id="@+id/button_delete_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_ok"
            android:text="@string/buttonDerailDelete" />

        <Button
            android:id="@+id/button_cancel_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_cancel"
            android:text="@string/buttonDetailCancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>