<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    android:id="@+id/hello_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />

        <!--
        <TextView
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/app_hello" />
        -->

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_sign_in"
            android:fontFamily="@font/montserrat"
            android:text="@string/buttonSignIn"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="2dp" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/button_register"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:text="@string/buttonRegister"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_under_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/app_under_bottom"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>